<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    >

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:background="@color/black"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textColor="@color/white"
        android:textSize="58sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        tools:ignore="ExtraText"
        >
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:fontFamily="sans-serif"
            android:onClick="onCLR"
            android:text="@string/clr"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="@drawable/my_button_text"
            />
        <Button
            android:id="@+id/btnbackspace"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:onClick="backbutton"
            android:background="@drawable/my_button"
            android:textSize="35sp"
            android:gravity="center"
            android:drawableStart="@drawable/baseline_backspace_24"
            android:textColor="@drawable/my_button_text"
            android:paddingStart="25dp"

            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btnModules"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/Modulus"
            android:onClick="onOperator"
            android:background="@drawable/my_button"
            android:textColor="@drawable/my_button_text"
            android:textSize="35sp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_slash"
            android:onClick="onOperator"
            android:background="@drawable/operator"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="@drawable/operator_text"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btn8"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btn9"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />

        <Button
            android:id="@+id/btnmultiply"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onOperator"
            android:background="@drawable/operator"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="@drawable/operator_text"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:layout_margin="3dp"
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btn5"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />

        <Button
            android:id="@+id/btnSubtrack"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/subtracl"
            android:onClick="onOperator"
            android:background="@drawable/operator"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="@drawable/operator_text"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:layout_margin="3dp"
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:text="@string/_1"

            android:onClick="onDigit"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/black_button"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="3dp"

            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/Add"
            android:onClick="onOperator"
            android:background="@drawable/operator"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="@drawable/operator_text"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:layout_margin="3dp"
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center_vertical"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="43dp"
            />
        <Button
            android:layout_margin="3dp"
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:onClick="onDecimalPoint"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            />
        <Button
            android:layout_margin="3dp"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/equal"
            android:onClick="onEqual"
            android:background="@drawable/operator"
            android:textSize="35sp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textColor="@drawable/operator_text"
            />

    </LinearLayout>
</LinearLayout>
